# Grain-Insight-Clifton

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  frontend-lint.yml
backend/: .env  .env.example  .gitignore  database.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b99697d8294_.py  8a5a01f35512_.py  f18db426fcc6_initial_migration.py  f3c07cd651c4_.py  fdb62a5a9f3e_.py
backend/core/: config.py  dependencies.py  grain_analysis.py  interactions.py  logging.py  security.py
backend/db/: database.py
backend/db/seeders/: seed_all.py  seed_roles.py  seed_statuses.py  seed_users.py
backend/documents/: DBeaver.md  数据库切换说明.md
backend/models/: __init__.py  document.py  job.py  role.py  status.py  user.py
backend/routers/: auth.py  document.py  user.py
backend/schemas/: auth.py  document.py  status.py  user.py
backend/tasks/: document_tasks.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/api/: documents.ts
frontend/src/components/: DocumentsTable.tsx  Navbar.tsx  ProtectedRoute.tsx  UserModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: Dashboard.tsx  Documents.tsx  Login.tsx  Users.tsx
frontend/src/services/: authService.ts
frontend/src/types/: auth.ts
frontend/src/utils/: tokenManager.ts
