[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "fastapi[all]>=0.124.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
    "segmenteverygrain>=0.2.3",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.black]
line-length = 88
target-version = ["py311"]

